[metadata]
name = gerrit-tui
version = 0.0.1
license_file = LICENSE
description = Console UI for Gerrit CodeReview
long_description = file:README.md
url = https://github.com/andrust/git-gerrit

[options]
packages = find:
package_dir =
    = src
install_requires =
    python-dateutil
    requests
    urwid
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gerrit-tui = gerrit_tui.__main__:main
